button for page 2

--- a/homepage.html
+++ b/homepage.html
@@ -1,3 +1,6 @@
 <a href = "pageone.html">
   <img scr = "imageforpage1.jpg">
   </a>
+<a href = "pagetwo.html">
+  <img scr = "imageforpage2.jpg">
+  </a>
