button for page 3

--- a/homepage.html
+++ b/homepage.html
@@ -4,3 +4,6 @@
 <a href = "pagetwo.html">
   <img scr = "imageforpage2.jpg">
   </a>
+<a href = "pagethree.html">
+  <img scr = "imageforpage3.jpg">
+  </a>
