--- a/pageone.html
+++ b/pageone.html
@@ -1,6 +1,2 @@
-<iframe src="https://player.vimeo.com/video/368570785" width="640"
- height="360" frameborder="0" allow="autoplay; fullscreen"
- allowfullscreen></iframe>
-<p><a href="https://vimeo.com/368570785">project3: street skating</a>
-from <a href="https://vimeo.com/user102734397">Jaden Green</a> on <a
-href="https://vimeo.com">Vimeo</a>.</p>
+<iframe src="https://player.vimeo.com/video/368570785" width="640" height="360" frameborder="0" allow="autoplay; fullscreen" allowfullscreen></iframe>
+<p><a href="https://vimeo.com/368570785">project3: street skating</a> from <a href="https://vimeo.com/user102734397">Jaden Green</a> on <a href="https://vimeo.com">Vimeo</a>.</p>
