--- a/homepage.html
+++ b/homepage.html
@@ -1,3 +1,4 @@
+<center>
 <a href = "pageone.html">
   <img scr = "imageforpage1.jpg">
   </a>
@@ -9,3 +10,4 @@
 <a href = "pagethree.html">
   <img scr = "imageforpage3.jpg">
   </a>
+<center>
