--- a/homepage.html
+++ b/homepage.html
@@ -1,11 +1,11 @@
 <a href = "pageone.html">
-  <img scr = "imageforpage1.jpg">
+  <img scr = "images/imageforpage1.jpg">
   </a>
 <br><br>
 <a href = "pagetwo.html">
-  <img scr = "imageforpage2.jpg">
+  <img scr = "images/imageforpage2.jpg">
   </a>
 <br><br>
 <a href = "pagethree.html">
-  <img scr = "imageforpage3.jpg">
+  <img scr = "images/imageforpage3.jpg">
   </a>
