--- a/homepage.html
+++ b/homepage.html
@@ -1,5 +1,5 @@
 <a href = "pageone.html">
-  <img src = "images/imageforpage1.jpg">
+  <img src = "images/imageforpage1.jpg" width = "250">
   </a>
 <br><br>
 <a href = "pagetwo.html">
