--- a/homepage.html
+++ b/homepage.html
@@ -1,3 +1,4 @@
+<center>
 <a href = "pageone.html">
   <img src = "images/imageforpage1.jpg" width = "250">
   </a>
@@ -9,3 +10,5 @@
 <a href = "pagethree.html">
   <img src = "images/imageforpage3.jpg">
   </a>
+
+  </center>
