--- a/homepage.html
+++ b/homepage.html
@@ -1,3 +1,4 @@
+<div style="background-image: url('images/homepagebackground.jpg');">
 <center>
 <a href = "pageone.html">
   <img src = "images/imageforpage1.jpg" width = "250">
