--- a/pagetwo.html
+++ b/pagetwo.html
@@ -1,2 +1,1 @@
-<iframe src="https://player.vimeo.com/video/368570236" width="640" height="360" frameborder="0" allow="autoplay; fullscreen" allowfullscreen></iframe>
-<p><a href="https://vimeo.com/368570236">project3: freestyle skating</a> from <a href="https://vimeo.com/user102734397">Jaden Green</a> on <a href="https://vimeo.com">Vimeo</a>.</p>
+<iframe src="https://player.vimeo.com/video/368570236?autoplay=1&muted=1" width="640" height="360" frameborder=“0” allowfullscreen allow=autoplay></iframe>
