--- a/pageone.html
+++ b/pageone.html
@@ -1,1 +1,4 @@
+<center>
 <iframe src="https://player.vimeo.com/video/368570785?autoplay=1&muted=1" width="640" height="360" frameborder=“0” allowfullscreen allow=autoplay></iframe>
+
+</center>
