--- a/pagethree.html
+++ b/pagethree.html
@@ -1,3 +1,4 @@
+<div style="background-image: url('images/page3background.jpg');">
 <center>
 <iframe src="https://player.vimeo.com/video/368570986?autoplay=1&muted=1" width="640" height="360" frameborder=“0” allowfullscreen allow=autoplay></iframe>
 
